# TobiCloud

./: README.md  pyproject.toml  spec.md  tobicloud  tobicloud.cmd
src/tobicloud/: __init__.py  cli.py  crypto.py  encoding.py  files.py  header.py  service.py  storage.py
tests/: test_encoding_crypto.py  test_header.py  test_service.py
